Implement self-contained ScreenshotTest Engine
Bug: 400816904
Test: ScreenshotTest
Change-Id: I71345f8ce30144eeabf75e8a6e04de2cbc5220ec